--- a/src/mail/template/password-reset.hbs
+++ b/src/mail/template/password-reset.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account Activation</title>
+    <title>Reset Password</title>
 </head>
 
 <body
@@ -20,7 +20,7 @@
             <td style="padding: 40px 30px;">
                 <p style="margin-bottom: 20px;">Hello {{name}},</p>
                 <p style="margin-bottom: 20px;">Thank you for registering with us. To activate your account, please use
-                    the following activation code:</p>
+                    the following reset password code:</p>
                 <div
                     style="background-color: #f8f8f8; border: 1px solid #e1e1e1; border-radius: 5px; padding: 15px; text-align: center; margin-bottom: 20px;">
                     <h2 style="font-size: 24px; color: #007bff; margin: 0;">{{activationCode}}</h2>
